dataset1235/2025-2/610742602/users/1276526791/executions/2563853024_3198308593.log
== RUN (2025-09-02 20:45:46)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi * (raio **3)
print(round(voulume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:46:25)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi * (raio ** 3)
print(round(voulume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:46:23)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi * (raio ** 3)
print(round(voulume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:54:46)
-- CODE: 
import math
raio= float(input())
volume =(4/3) * math.pi * (raio ** 3)
print(round(volume, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:45:49)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi * (raio **3)
print(round(voulume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:45:44)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi * (raio **3)
print(round(voulume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:46:23)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi * (raio ** 3)
print(round(voulume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:45:04)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi *(raio **3)
print (round) (voulume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 4
    print (round) (voulume,4))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 4
    print (round) (voulume,4))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 4
    print (round) (voulume,4))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 4
    print (round) (voulume,4))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 4
    print (round) (voulume,4))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 4
    print (round) (voulume,4))
                             ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:45:17)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi *(raio **3)
print (round(voulume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(voulume,4))
                 ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(voulume,4))
                 ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(voulume,4))
                 ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(voulume,4))
                 ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(voulume,4))
                 ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(voulume,4))
                 ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:46:06)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi * (raio ** 3)
print(round(voulume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:45:16)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi *(raio **3)
print (round(voulume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(voulume,4))
                 ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(voulume,4))
                 ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(voulume,4))
                 ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(voulume,4))
                 ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(voulume,4))
                 ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print (round(voulume,4))
                 ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:46:22)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi * (raio ** 3)
print(round(voulume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume, 4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:51:00)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi * (raio ** 3)
print(round(volume, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:51:19)
-- CODE: 
import math
raio= float(input())
volume =(4/3) * math.pi * (raio ** 3)
print(round(volume, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:46:07)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi * (raio ** 3)
print(round(voulume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:46:09)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi * (raio ** 3)
print(round(voulume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:45:44)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi * (raio **3)
print(round(voulume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(voulume,4))
                ^^^^^^^
NameError: name 'voulume' is not defined. Did you mean: 'volume'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:45:05)
-- CODE: 
import math
raio= float (input())
volume =(4/3) * math.pi *(raio **3)
print (round) (voulume,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 4
    print (round) (voulume,4))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 4
    print (round) (voulume,4))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 4
    print (round) (voulume,4))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 4
    print (round) (voulume,4))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 4
    print (round) (voulume,4))
                             ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 4
    print (round) (voulume,4))
                             ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
